<resources>
    <string name="app_name">Notes</string>
    <string name="sort">Sort</string>
    <string name="press_add_new_note">Press &quot;+&quot; to add new Note</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_error_msg">Title can\'t ovveride 30 characters</string>
    <string name="desc_error_msg">Description can\'t ovveride 300 characters</string>
    <string name="title_missing_msg">Title is required</string>
    <string name="errors_save_note">You can\'t save the note. Check the errors!</string>
    <string name="errors_save_note_title">You can\'t save. Title is required.</string>
    <string name="sort_based_on">Sort based on:</string>
    <string name="sort_title">Title</string>
    <string name="title">Title</string>
    <string name="sort_description">Description</string>
    <string name="description">Description</string>
    <string name="sort_date">Date</string>
    <string name="sort_color">Color</string>
    <string name="sort_check">Check</string>
    <string name="done">done</string>
    <string name="delete">Delete</string>
    <string name="delete_Cap">DELETE</string>
    <string name="alarm">Alarm</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dIR_PARENT">/notes</string>
    <string name="settings">Settings</string>
    <string name="display_items_list">Display items in the list</string>
    <string name="display_items">Display items</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_summary">Choose the font size for description.</string>
    <string name="reminder_time_title">Reminder time</string>
    <string name="reminder_time_summary">How long before the alarm time you want to be notified.</string>
    <string name="report_issue">Report Issue</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="rate_dialog_title">Rate this App</string>
    <string name="rate_dialog_content">If this app helped you, please take a moment to rate this app. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_now">RATE NOW</string>
    <string name="rate_no">NO, THANKS</string>
    <string name="rate_later">LATER</string>
    <string name="default_color_title">Default Color</string>
    <string name="default_color_summary">Choose the default color for notes.</string>
    <string name="calendar">Calendar</string>
    <string name="trash">Trash</string>
    <string name="backup">Backup Notes</string>
    <string name="restore">Restore Notes</string>
    <string name="choice">Choice</string>
    <string name="backup_completed">Backup completed!</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="loading">Loading</string>
    <string name="restoring_notes">Wait while restoring notes...</string>
    <string name="restore_completed">Restore completed!</string>
    <string name="delete_notes">Delete notes</string>
    <string name="delete_notes_message">Are you sure you want to delete all notes?</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="backup_write_fail">There was a problem with backup notes.</string>
    <string name="delete_fail_message">The note was not deleted due to a problem.</string>
    <string name="no_reminer_delete">no reminder to delete</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder_message">Reminder is set at </string>
    <string name="set_reminder_problem">A problem occurs with reminder set </string>
    <string name="note_saved">Note is saved </string>
    <string name="note_updated">Note is updated </string>
    <string name="disable_alarm">Disable Alarm</string>
    <string name="check">Check</string>
    <string name="unCheck">Uncheck</string>
    <string name="choose_color_note">Choose color for your note:</string>
    <string name="device_offline">Device offline</string>
    <string name="connect_to_internet">Please connect to the internet in order to continue with error reporting.</string>
    <string name="ok">OK</string>

</resources>
