<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/alarm"
        android:title="@string/alarm"
        android:icon="@drawable/ic_add_alert_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/notalarm"
        android:title="@string/disable_alarm"
        android:icon="@drawable/ic_notifications_off_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/check"
        android:title="@string/check"
        android:icon="@drawable/ic_assignment_turned_in_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_variant_white_24dp"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
</menu>